--- a/static/css/app.css
+++ b/static/css/app.css
@@ -21,6 +21,8 @@
 .navbar{
     height: 300px;
     background-image: url('../images/header.jpg');
+    background-repeat: no-repeat;
+    background-color: #FFFFFF;
 }
 @media (max-width: 979px) {
     .navbar {
